home page responsive

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section class="hero">
             <div class="container-xxl">
                 <div class="row align-items-end justify-content-between">
-                    <div class="col-md-7 col-lg-5 order-md-1">
+                    <div class="col-md-7 col-xl-6 order-md-1">
                         <div class="h-left">
                             <h2 class="m-0">integrated Communications Agency</h2>
                         </div>
@@ -103,7 +103,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="elb-counter ps-3">
+                            <div class="elb-counter ps-lg-3">
                                 <div class="row">
                                     <div class="col-6 p-0">
                                         <div class="elb-co-box elb-co-box-1">
@@ -174,8 +174,10 @@
                         <h2>Outreach & Marketing solution</h2>
                         <div class="ous-cont">
                             <div class="row justify-content-between">
-                                <div class="col-lg-5 mt-3"><img src="image/our-sol-1.jpg" alt="" class="w-100"></div>
-                                <div class="col-lg-6 mt-3">
+                                <div class="col-lg-5 mt-md-3 p-0">
+                                    <img src="image/our-sol-1.jpg" alt="" class="w-100">
+                                </div>
+                                <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
                                         <div class="">
                                             <p>Elevate your brand's presence with our Outreach & Marketing Solutions,
@@ -205,8 +207,10 @@
                         <h2>FILM & PHOTOGRAPHY</h2>
                         <div class="ous-cont">
                             <div class="row justify-content-between">
-                                <div class="col-lg-5 mt-3"><img src="image/our-sol-1.jpg" alt="" class="w-100"></div>
-                                <div class="col-lg-6 mt-3">
+                                <div class="col-lg-5 mt-md-3 p-0">
+                                    <img src="image/our-sol-1.jpg" alt="" class="w-100">
+                                </div>
+                                <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
                                         <div class="">
                                             <p>Elevate your brand's presence with our Outreach & Marketing Solutions,
@@ -233,11 +237,112 @@
                         <h6>03.</h6>
                     </div>
                     <div class="ous-right">
-                        <h2>MEDIA SOLUTIONS</h2>
+                        <h2>Outreach</h2>
                         <div class="ous-cont">
                             <div class="row justify-content-between">
-                                <div class="col-lg-5 mt-3"><img src="image/our-sol-1.jpg" alt="" class="w-100"></div>
-                                <div class="col-lg-6 mt-3">
+                                <div class="col-lg-5 mt-md-3 p-0">
+                                    <img src="image/our-sol-1.jpg" alt="" class="w-100">
+                                </div>
+                                <div class="col-lg-6 mt-3 p-0">
+                                    <div class="d-flex flex-column justify-content-between h-100">
+                                        <div class="">
+                                            <p>Elevate your brand's presence with our Outreach & Marketing Solutions,
+                                                encompassing Influencer Marketing, Inter-Brand Collaborations, WhatsApp
+                                                & eMail Campaigns, Social Media Management, Evergreen Strategy
+                                                Development, and SEO. Amplify regional reach, shape online narratives,
+                                                and drive impactful results through our comprehensive suite of services
+                                                tailored for your success.</p>
+                                        </div>
+                                        <div class="">
+                                            <a href="#" class="th-arrow-btn">
+                                                <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
+                                                <span class="btn-text">Learn More</span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="ous-box">
+                    <div class="ous-left">
+                        <h6>04.</h6>
+                    </div>
+                    <div class="ous-right">
+                        <h2>CREATIVE & BRANDING</h2>
+                        <div class="ous-cont">
+                            <div class="row justify-content-between">
+                                <div class="col-lg-5 mt-md-3 p-0">
+                                    <img src="image/our-sol-1.jpg" alt="" class="w-100">
+                                </div>
+                                <div class="col-lg-6 mt-3 p-0">
+                                    <div class="d-flex flex-column justify-content-between h-100">
+                                        <div class="">
+                                            <p>Elevate your brand's presence with our Outreach & Marketing Solutions,
+                                                encompassing Influencer Marketing, Inter-Brand Collaborations, WhatsApp
+                                                & eMail Campaigns, Social Media Management, Evergreen Strategy
+                                                Development, and SEO. Amplify regional reach, shape online narratives,
+                                                and drive impactful results through our comprehensive suite of services
+                                                tailored for your success.</p>
+                                        </div>
+                                        <div class="">
+                                            <a href="#" class="th-arrow-btn">
+                                                <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
+                                                <span class="btn-text">Learn More</span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="ous-box">
+                    <div class="ous-left">
+                        <h6>05.</h6>
+                    </div>
+                    <div class="ous-right">
+                        <h2>WEB & AR</h2>
+                        <div class="ous-cont">
+                            <div class="row justify-content-between">
+                                <div class="col-lg-5 mt-md-3 p-0">
+                                    <img src="image/our-sol-1.jpg" alt="" class="w-100">
+                                </div>
+                                <div class="col-lg-6 mt-3 p-0">
+                                    <div class="d-flex flex-column justify-content-between h-100">
+                                        <div class="">
+                                            <p>Elevate your brand's presence with our Outreach & Marketing Solutions,
+                                                encompassing Influencer Marketing, Inter-Brand Collaborations, WhatsApp
+                                                & eMail Campaigns, Social Media Management, Evergreen Strategy
+                                                Development, and SEO. Amplify regional reach, shape online narratives,
+                                                and drive impactful results through our comprehensive suite of services
+                                                tailored for your success.</p>
+                                        </div>
+                                        <div class="">
+                                            <a href="#" class="th-arrow-btn">
+                                                <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
+                                                <span class="btn-text">Learn More</span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="ous-box">
+                    <div class="ous-left">
+                        <h6>06.</h6>
+                    </div>
+                    <div class="ous-right">
+                        <h2>OUTSIDE OF HOME</h2>
+                        <div class="ous-cont">
+                            <div class="row justify-content-between">
+                                <div class="col-lg-5 mt-md-3 p-0">
+                                    <img src="image/our-sol-1.jpg" alt="" class="w-100">
+                                </div>
+                                <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
                                         <div class="">
                                             <p>Elevate your brand's presence with our Outreach & Marketing Solutions,
@@ -373,37 +478,42 @@
                 <br>
                 <br>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-sm-6 col-lg-4 mt-sm-5 mt-lg-0">
                         <div class="wead-box">
                             <div class="wead-img"><img src="image/wead-1.png" alt="" class="w-100"></div>
                             <div class="wead-text">
                                 <h3>MediaX OOH</h3>
                                 <p>MediaX excels in Out-of-Home (OOH) advertising, captivating audiences with innovative
-                                    campaigns that leave a lasting impression. With strategic placements and creative
-                                    concepts, MediaX amplifies brands' visibility and impact in the bustling world
-                                    beyond screens.</p>
+                                    campaigns that leave a lasting impression.
+                                    <!-- With strategic placements and creative concepts, MediaX amplifies brands' visibility and impact in the bustling world
+                                    beyond screens. -->
+                                </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-6 col-lg-4 mt-5 mt-lg-0">
                         <div class="wead-box">
                             <div class="wead-img"><img src="image/wead-2.png" alt="" class="w-100"></div>
                             <div class="wead-text">
                                 <h3>HAPPENING IN</h3>
                                 <p>Happening In, curated by MediaX, is a vibrant Instagram city page fostering community
-                                    engagement. Businesses thrive here, leveraging its platform to promote their
-                                    ventures and connect with local audiences effectively.</p>
+                                    engagement.
+                                    <!-- Businesses thrive here, leveraging its platform to promote their
+                                    ventures and connect with local audiences effectively. -->
+                                </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-6 col-lg-4 mt-5 mt-lg-0">
                         <div class="wead-box">
                             <div class="wead-img"><img src="image/wead-3.png" alt="" class="w-100"></div>
                             <div class="wead-text">
                                 <h3>MediaX CLICK</h3>
                                 <p>MediaX CLICK is a dynamic production house specializing in crafting compelling visual
-                                    narratives. With a keen eye for detail and creativity, we bring stories to life
-                                    through film, photography, and design.</p>
+                                    narratives.
+                                    <!-- With a keen eye for detail and creativity, we bring stories to life
+                                    through film, photography, and design. -->
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -419,7 +529,7 @@
                     <h2>Look what they say about us</h2>
                 </div>
                 <div class="testimonial-container">
-                    <div class="tes-box">
+                    <div class="tes-box open">
                         <div class="test-head">
                             <h4>Arts & Life</h4>
                         </div>
@@ -441,7 +551,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tes-box">
+                    <div class="tes-box close">
                         <div class="test-head">
                             <h4>Dimple Collections</h4>
                         </div>
@@ -463,7 +573,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tes-box">
+                    <div class="tes-box close">
                         <div class="test-head">
                             <h4>VAHE WIBES</h4>
                         </div>
@@ -485,7 +595,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tes-box">
+                    <div class="tes-box close">
                         <div class="test-head">
                             <h4>TRAVEL BUREAU</h4>
                         </div>
@@ -507,7 +617,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tes-box open">
+                    <div class="tes-box close">
                         <div class="test-head">
                             <h4>TRAVEL BUREAU</h4>
                         </div>
@@ -538,17 +648,17 @@
         <!-- Work With Us Section Start -->
         <section class="work-with">
             <div class="container-xxl">
-                <div class="row">
-                    <div class="col-md-6 d-flex align-items-end">
+                <div class="row justify-content-between">
+                    <div class="col-lg-5 d-flex align-items-end">
                         <div class="">
                             <h2>Work With Us</h2>
                             <p>An integrated marketing agency for businesses of any size, handling all sorts of
                                 development, creative, and marketing needs from start to end.</p>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-lg-7 col-xxl-6">
                         <div class="row">
-                            <div class="col-sm-6">
+                            <div class="col-sm-6 px-0 px-sm-2">
                                 <div class="wow-box">
                                     <h2>One-off Project</h2>
                                     <p>Delivery of a branding project, CGI project, marketing campaign, and brand
@@ -559,7 +669,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-sm-6 px-0 px-sm-2 mt-4 mt-sm-0">
                                 <div class="wow-box">
                                     <h2>Retained Support</h2>
                                     <p>Instant consultations, monthly retained activities, social media management,
@@ -607,10 +717,7 @@
     <!-- ========== main Js ========== -->
     <script src="js/main.js"></script>
     <script>
-        $('.tes-box').click(function () {
-            $('.tes-box').removeClass('open').addClass('close');
-            $(this).addClass('open').removeClass('close');
-        })
+
     </script>
     <script>
         // Counter code
@@ -643,6 +750,35 @@
                 });
             });
         }
+
+    </script>
+    <script>
+      $(document).ready(function () {
+    $(window).on('load', checkViewportWidth);
+
+    function checkViewportWidth() {
+        var viewportWidth = $(window).width();
+        $('.tes-box').off('click'); // Remove previous click event listeners
+
+        if (viewportWidth <= 576) {
+            $('.test-content').slideUp();
+            $('.tes-box.open .test-content').slideDown();
+
+            $('.tes-box').on('click', function () {
+                $('.tes-box').removeClass('open').addClass('close').find('.test-content').slideUp(500);
+                $(this).addClass('open').removeClass('close').find('.test-content').slideDown(500);
+            });
+        } else {
+            $('.tes-box').on('click', function () {
+                $('.tes-box').removeClass('open').addClass('close');
+                $(this).addClass('open').removeClass('close');
+            });
+        }
+    }
+
+    // checkViewportWidth();
+});
+
 
     </script>
     <script>
@@ -679,6 +815,7 @@
             ]
         })
     </script>
+
 </body>
 
 </html>
