--- a/footer.html
+++ b/footer.html
@@ -2,16 +2,16 @@
     <div class="footer-main">
         <div class="footer-top">
             <div class="row justify-content-between align-items-end">
-                <div class="col-sm-6 col-lg-4">
+                <div class="col-sm-6 col-lg-4 p-0">
                     <div class="ft-left">
                         <h3>
-                            Let’s create
-                            something great together
+                            Let's create
+                            something great together
                         </h3>
                         <p>Based in <a href="#">Delhi</a> & <a href="#">Agra</a></p>
                     </div>
                 </div>
-                <div class="col-sm-5 d-flex justify-content-end">
+                <div class="col-sm-5 d-flex justify-content-end p-0">
                     <div class="ft-right">
                         <h4>SAY HELLO!</h4>
                         <p>
@@ -24,17 +24,17 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <div class="row align-items-center">
+            <div class="row align-items-center justify-content-between justify-content-lg-start">
                 <div class="col-md-3 col-sm-4">
-                    <div class="foot-logo"><img src="image/logo.png" class="w-100" alt=""></div>
+                    <div class="foot-logo mx-auto mx-sm-0"><img src="image/logo.png" class="w-100" alt=""></div>
                 </div>
                 <div class="col-md-6 col-sm-7">
-                    <div class="foot-social">
-                        <ul class="m-0 p-0 d-flex justify-content-between align-items-center flex-wrap">
-                            <li><a href="#">INSTAGRAM</a></li>
-                            <li><a href="#">LINKEDIN</a></li>
-                            <li><a href="#">BEHANCE</a></li>
-                            <li><a href="#">FACEBOOK</a></li>
+                    <div class="foot-social mt-3 mt-sm-0">
+                        <ul class="m-0 p-0 d-flex justify-content-center justify-content-md-between align-items-center flex-wrap">
+                            <li class="p-1"><a href="#">INSTAGRAM</a></li>
+                            <li class="p-1"><a href="#">LINKEDIN</a></li>
+                            <li class="p-1"><a href="#">BEHANCE</a></li>
+                            <li class="p-1"><a href="#">FACEBOOK</a></li>
                         </ul>
                     </div>
                 </div>
