--- a/about-us.html
+++ b/about-us.html
@@ -101,7 +101,7 @@
                 <div class="team-head">
                     <div class="row">
                         <div class="col-md-10">
-                            <h2 class="mb-5">
+                            <h2 class=" mb-md-5">
                                 We are a diverse mix of specialists under <span class="red-line">one</span> Two roof
                             </h2>
                         </div>
@@ -117,7 +117,7 @@
                     </div>
                     <div class="team-box">
                         <div class="row">
-                            <div class="col-xl-2 col-md-3 col-sm-4 mt-4">
+                            <div class="col-xl-2 col-md-3 col-sm-4 col-6 mt-4">
                                 <div class="te-box">
                                     <div class="te-img"><img src="image/team-1.png" alt="" class="w-100"></div>
                                     <div class="te-text">
@@ -126,7 +126,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-2 col-md-3 col-sm-4 mt-4">
+                            <div class="col-xl-2 col-md-3 col-sm-4 col-6 mt-4">
                                 <div class="te-box">
                                     <div class="te-img"><img src="image/team-2.png" alt="" class="w-100"></div>
                                     <div class="te-text">
@@ -135,7 +135,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-2 col-md-3 col-sm-4 mt-4">
+                            <div class="col-xl-2 col-md-3 col-sm-4 col-6 mt-4">
                                 <div class="te-box">
                                     <div class="te-img"><img src="image/team-3.png" alt="" class="w-100"></div>
                                     <div class="te-text">
@@ -144,7 +144,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-2 col-md-3 col-sm-4 mt-4">
+                            <div class="col-xl-2 col-md-3 col-sm-4 col-6 mt-4">
                                 <div class="te-box">
                                     <div class="te-img"><img src="image/team-1.png" alt="" class="w-100"></div>
                                     <div class="te-text">
@@ -153,7 +153,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-2 col-md-3 col-sm-4 mt-4">
+                            <div class="col-xl-2 col-md-3 col-sm-4 col-6 mt-4">
                                 <div class="te-box">
                                     <div class="te-img"><img src="image/team-2.png" alt="" class="w-100"></div>
                                     <div class="te-text">
@@ -162,7 +162,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-2 col-md-3 col-sm-4 mt-4">
+                            <div class="col-xl-2 col-md-3 col-sm-4 col-6 mt-4">
                                 <div class="te-box">
                                     <div class="te-img"><img src="image/team-3.png" alt="" class="w-100"></div>
                                     <div class="te-text">
@@ -171,7 +171,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-2 col-md-3 col-sm-4 mt-4">
+                            <div class="col-xl-2 col-md-3 col-sm-4 col-6 mt-4">
                                 <div class="te-box">
                                     <div class="te-img"><img src="image/team-1.png" alt="" class="w-100"></div>
                                     <div class="te-text">
@@ -180,7 +180,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-2 col-md-3 col-sm-4 mt-4">
+                            <div class="col-xl-2 col-md-3 col-sm-4 col-6 mt-4">
                                 <div class="te-box">
                                     <div class="te-img"><img src="image/team-2.png" alt="" class="w-100"></div>
                                     <div class="te-text">
@@ -189,7 +189,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-2 col-md-3 col-sm-4 mt-4">
+                            <div class="col-xl-2 col-md-3 col-sm-4 col-6 mt-4">
                                 <div class="te-box">
                                     <div class="te-img"><img src="image/team-3.png" alt="" class="w-100"></div>
                                     <div class="te-text">
@@ -198,7 +198,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-2 col-md-3 col-sm-4 mt-4">
+                            <div class="col-xl-2 col-md-3 col-sm-4 col-6 mt-4">
                                 <div class="te-box">
                                     <div class="te-img"><img src="image/team-1.png" alt="" class="w-100"></div>
                                     <div class="te-text">
@@ -207,7 +207,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-2 col-md-3 col-sm-4 mt-4">
+                            <div class="col-xl-2 col-md-3 col-sm-4 col-6 mt-4">
                                 <div class="te-box">
                                     <div class="te-img"><img src="image/team-2.png" alt="" class="w-100"></div>
                                     <div class="te-text">
@@ -216,7 +216,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-2 col-md-3 col-sm-4 mt-4">
+                            <div class="col-xl-2 col-md-3 col-sm-4 col-6 mt-4">
                                 <div class="te-box">
                                     <div class="te-img"><img src="image/team-3.png" alt="" class="w-100"></div>
                                     <div class="te-text">
@@ -239,25 +239,58 @@
             </div>
             <div class="container-xxl p-0 mt-5">
                 <div class="gli-img-container">
-                    <div class="gli-img-box">
-                        <div class="glimg active" data-tra="700px" id="glimg-1"><img src="image/i1.png" class="w-100" alt=""></div>
-                        <div class="glimg" data-tra="400px" id="glimg-2"><img src="image/i2.png" class="w-100" alt=""></div>
-                        <div class="glimg" data-tra="100px" id="glimg-3"><img src="image/i3.png" class="w-100" alt=""></div>
-                        <div class="glimg" data-tra="-300px" id="glimg-4"><img src="image/i5.png" class="w-100" alt=""></div>
-                        <div class="glimg" data-tra="-600px" id="glimg-5"><img src="image/i7.png" class="w-100" alt=""></div>
-                        <div class="glimg" data-tra="-900px" id="glimg-6"><img src="image/i6.png" class="w-100" alt=""></div>
-                        <div class="glimg" data-tra="-1100px" id="glimg-7"><img src="image/i4.png" class="w-100" alt=""></div>
+                    <div class="gli-img-box d-none d-lg-flex">
+                        <div class="glimg active" data-tra="700px" id="glimg-1"><img src="image/i1.png" class="w-100"
+                                alt=""></div>
+                        <div class="glimg" data-tra="400px" id="glimg-2"><img src="image/i2.png" class="w-100" alt="">
+                        </div>
+                        <div class="glimg" data-tra="100px" id="glimg-3"><img src="image/i3.png" class="w-100" alt="">
+                        </div>
+                        <div class="glimg" data-tra="-300px" id="glimg-4"><img src="image/i5.png" class="w-100" alt="">
+                        </div>
+                        <div class="glimg" data-tra="-600px" id="glimg-5"><img src="image/i7.png" class="w-100" alt="">
+                        </div>
+                        <div class="glimg" data-tra="-900px" id="glimg-6"><img src="image/i6.png" class="w-100" alt="">
+                        </div>
+                        <div class="glimg" data-tra="-1100px" id="glimg-7"><img src="image/i4.png" class="w-100" alt="">
+                        </div>
+                    </div>
+                    <div class="gli-img-box d-flex d-lg-none">
+                        <div class="glimg active" data-tra="480px" id="glimg-1"><img src="image/i1.png" class="w-100"
+                                alt=""></div>
+                        <div class="glimg" data-tra="200px" id="glimg-2"><img src="image/i2.png" class="w-100" alt="">
+                        </div>
+                        <div class="glimg" data-tra="0px" id="glimg-3"><img src="image/i3.png" class="w-100" alt="">
+                        </div>
+                        <div class="glimg" data-tra="-200px" id="glimg-4"><img src="image/i5.png" class="w-100" alt="">
+                        </div>
+                        <div class="glimg" data-tra="-400px" id="glimg-5"><img src="image/i7.png" class="w-100" alt="">
+                        </div>
+                        <div class="glimg" data-tra="-600px" id="glimg-6"><img src="image/i6.png" class="w-100" alt="">
+                        </div>
+                        <div class="glimg" data-tra="-800px" id="glimg-7"><img src="image/i4.png" class="w-100" alt="">
+                        </div>
                     </div>
                 </div>
                 <div class="row justify-content-center text-center">
                     <div class="col-sm-10 col-md-8 mt-5 glimg-text">
-                     <p data-gli-text="glimg-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non iusto rem minima, dolorum molestias minus hic. Eaque eum labore at deserunt ut numquam modi reprehenderit, perspiciatis blanditiis nesciunt facere recusandae!</p>
-                     <p data-gli-text="glimg-2">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                     <p data-gli-text="glimg-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non iusto rem minima, dolorum</p>
-                     <p data-gli-text="glimg-4">Non iusto rem minima, dolorum molestias minus hic. Eaque eum labore at deserunt ut numquam modi reprehenderit, perspiciatis blanditiis nesciunt facere recusandae!</p>
-                     <p data-gli-text="glimg-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non iusto rem minima, dolorum molestias minus hic. Eaque eum labore at deserunt ut numquam modi reprehenderit</p>
-                     <p data-gli-text="glimg-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque eum labore at deserunt ut numquam modi reprehenderit, perspiciatis blanditiis nesciunt facere recusandae!</p>
-                     <p data-gli-text="glimg-7">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non iusto rem minima, perspiciatis blanditiis nesciunt facere recusandae!</p>
+                        <p data-gli-text="glimg-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non iusto
+                            rem minima, dolorum molestias minus hic. Eaque eum labore at deserunt ut numquam modi
+                            reprehenderit, perspiciatis blanditiis nesciunt facere recusandae!</p>
+                        <p data-gli-text="glimg-2">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p data-gli-text="glimg-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non iusto
+                            rem minima, dolorum</p>
+                        <p data-gli-text="glimg-4">Non iusto rem minima, dolorum molestias minus hic. Eaque eum labore
+                            at deserunt ut numquam modi reprehenderit, perspiciatis blanditiis nesciunt facere
+                            recusandae!</p>
+                        <p data-gli-text="glimg-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non iusto
+                            rem minima, dolorum molestias minus hic. Eaque eum labore at deserunt ut numquam modi
+                            reprehenderit</p>
+                        <p data-gli-text="glimg-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque eum
+                            labore at deserunt ut numquam modi reprehenderit, perspiciatis blanditiis nesciunt facere
+                            recusandae!</p>
+                        <p data-gli-text="glimg-7">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non iusto
+                            rem minima, perspiciatis blanditiis nesciunt facere recusandae!</p>
                     </div>
                 </div>
             </div>
@@ -327,7 +360,7 @@
         <section class="our-belifes">
             <div class="container-xxl">
                 <div class="row justify-content-between ">
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <div class="oub-left h-100 d-flex  flex-column  justify-content-between ">
                             <div class="">
                                 <h2>Our Beliefs</h2>
@@ -342,10 +375,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-lg-6 col-xl-5 p-0 p-sm-2">
                         <div class="oub-right">
                             <div class="row">
-                                <div class="col-sm-6 mb-5 px-3">
+                                <div class="col-sm-6 mt-4 mb-sm-5 px-sm-3">
                                     <div class="oub-box oub-box-1">
                                         <img src="image/bel-face.png" alt="">
                                         <h5>Keep It human</h5>
@@ -353,7 +386,7 @@
                                             real lives we touch.</p>
                                     </div>
                                 </div>
-                                <div class="col-sm-6 mb-5 px-3">
+                                <div class="col-sm-6 mt-4 mb-sm-5 px-sm-3">
                                     <div class="oub-box oub-box-2">
                                         <img src="image/bel-plane.png" alt="">
                                         <h5>Push our boundaries</h5>
@@ -361,7 +394,7 @@
                                             and build for people.</p>
                                     </div>
                                 </div>
-                                <div class="col-sm-6 mb-5 px-3">
+                                <div class="col-sm-6 mt-4 mb-sm-5 px-sm-3">
                                     <div class="oub-box oub-box-3">
                                         <img src="image/bel-chat.png" alt="">
                                         <h5>Uncover the stories</h5>
@@ -369,7 +402,7 @@
                                             resonate deeply with audiences.</p>
                                     </div>
                                 </div>
-                                <div class="col-sm-6 mb-5 px-3">
+                                <div class="col-sm-6 mt-4 mb-sm-5 px-sm-3">
                                     <div class="oub-box oub-box-4">
                                         <img src="image/bel-target.png" alt="">
                                         <h5>Driving Results</h5>
@@ -417,16 +450,15 @@
     <script>
         $(".glimg-text p").fadeOut();
         $(`.glimg-text [data-gli-text="${$('.glimg.active').attr('id')}"]`).fadeIn();
-        $(".glimg").click(function(){
+        $(".glimg").click(function () {
             $(".glimg").removeClass('active');
             $(".glimg-text p").fadeOut();
-                $(this).addClass('active');    
-                $(".gli-img-box").css({
-                    "transform": `translateX(${$(this).data('tra')})`
-                })
-        $(`.glimg-text [data-gli-text="${ $(this).attr('id')}"]`).fadeIn();
-
+            $(this).addClass('active');
+            $(".gli-img-box").css({
+                "transform": `translateX(${$(this).data('tra')})`
             })
+            $(`.glimg-text [data-gli-text="${$(this).attr('id')}"]`).fadeIn();
+        })
     </script>
     <script>
         $(".partner-slider").slick({
