--- a/header.html
+++ b/header.html
@@ -13,6 +13,7 @@
                         <li class="nm-item"><a class="nm-link" href="about-us.html">About Us</a></li>
                         <li class="nm-item"><a class="nm-link" href="service.html">Services</a></li>
                         <li class="nm-item"><a class="nm-link" href="project.html">Projects</a></li>
+                        <li class="nm-item"><a class="nm-link" href="careers.html">Careers</a></li>
                     </ul>
                 </div>
             </div>
